# suika

./: .gitignore  Cargo.toml  index.html  index.js  note.md  package-lock.json  package.json  readme.md  sample-code-for-ref.js  webpack.config.js
.github/workflows/: webpack.yml
src/: constants.rs  game.rs  helpers.rs  main.rs  menu.rs  resources.rs  setup.rs
src/game/: collision.rs  game_over.rs  mod.rs  mouse_click.rs  physics_manipulations.rs  physics_restrictions.rs  update_preview.rs
src/menu/: mod.rs  noise_toggle.rs  physics_slider.rs  restart.rs
src/resources/: mod.rs
src/setup/: bg_music.rs  mod.rs
